[project]
name = "dl-basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "bitsandbytes>=0.46.1",
    "peft>=0.17.0",
    "qwen-vl-utils[decord]==0.0.8",
    "tqdm>=4.67.1",
    "transformers>=4.54.1",
]
